testing: re-added OmicCircos to NAMESPACE and DESCRIPTION--not sure this will work with most up-to-date R.Version()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     hexbin,
     data.table,
     ash,
-    fields
+    fields,
+    OmicCircos
 License: GPL (>=2)
 LazyData: true
 Suggests: 
