Had to delete OmicCircos from DESCRIPTION, as package does not load on my machine when this is included :(

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,7 @@ Imports:
     hexbin,
     data.table,
     ash,
-    fields,
-    OmicCircos
+    fields
 License: GPL (>=2)
 LazyData: true
 Suggests: 
