Made kernel density distance method. Added function to calculate kernel density bandwidth

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(MINOTAUR)
 export(Mahalanobis)
 export(harmonicDist)
+export(kernelDist)
+export(kernelLogLike)
 exportPattern("^[[:alpha:]]+")
 import(MASS)
 import(RColorBrewer)
