Kernel density now works slightly differently, and should be better. Added nearest neighbor distance method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Mahalanobis)
 export(harmonicDist)
 export(kernelDist)
 export(kernelLogLike)
+export(neighborDist)
 exportPattern("^[[:alpha:]]+")
 import(MASS)
 import(RColorBrewer)
