--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(MINOTAUR)
 export(Mahalanobis)
 export(harmonicDist)
+export(kernelDeviance)
 export(kernelDist)
-export(kernelLogLike)
 export(neighborDist)
 exportPattern("^[[:alpha:]]+")
 import(DT)
