--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(neighborDist)
 exportPattern("^[[:alpha:]]+")
 import(DT)
 import(Hmisc)
-import(MASS)
+import(OmicCircos)
 import(RColorBrewer)
 import(Rcpp)
 import(adegenet)
@@ -17,11 +17,8 @@ import(ash)
 import(data.table)
 import(fields)
 import(ggplot2)
-import(hexbin)
-import(scales)
 import(shiny)
 import(shinydashboard)
 import(shinyjs)
-import(stats4)
 importFrom(Rcpp,evalCpp)
 useDynLib(MINOTAUR)
