--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(ash)
 import(data.table)
 import(fields)
 import(ggplot2)
+import(hexbin)
 import(shiny)
 import(shinydashboard)
 import(shinyjs)
