attempted to fix loading of OmicCircos, DT; cleaned up circle plot page; fixed logging of outlier variables.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(harmonicDist)
 export(kernelDeviance)
 export(kernelDist)
 export(neighborDist)
+export(plot_2D)
 exportPattern("^[[:alpha:]]+")
 import(DT)
 import(Hmisc)
