* new fields and modified some fields to be more accurate with names of authors and creator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,14 @@ export(kernelDist)
 export(neighborDist)
 export(plot_2D)
 exportPattern("^[[:alpha:]]+")
-import(DT)
-import(RColorBrewer)
-import(Rcpp)
-import(adegenet)
-import(ash)
-import(data.table)
-import(fields)
-import(ggplot2)
-import(shiny)
-import(shinydashboard)
-import(shinyjs)
 importFrom(Rcpp,evalCpp)
+importFrom(adegenet,transp)
+importFrom(ash,bin2)
+importFrom(fields,image.plot)
+importFrom(graphics,points)
+importFrom(graphics,title)
+importFrom(shiny,runApp)
+importFrom(stats,complete.cases)
+importFrom(stats,cov)
+importFrom(utils,flush.console)
 useDynLib(MINOTAUR)
