* `github::Bioconductor-mirror/BiocInstaller` is required for `github::Bioconductor-mirror/OmicCircos` to work...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Suggests:
     knitr,
     rmarkdown
 Remotes:
+    github::Bioconductor-mirror/BiocInstaller
     github::Bioconductor-mirror/OmicCircos
     github::rstudio/DT
 LinkingTo: Rcpp
