--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ notifications:
     on_failure: change
 
 r_github_packages:
+  - Bioconductor-mirror/BiocInstaller
   - Bioconductor-mirror/OmicCircos
   - rstudio/DT
