--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,8 @@ Suggests:
     knitr,
     rmarkdown
 Remotes:
-    github::Bioconductor-mirror/BiocInstaller
-    github::Bioconductor-mirror/OmicCircos
+    github::Bioconductor-mirror/BiocInstaller,
+    github::Bioconductor-mirror/OmicCircos,
     github::rstudio/DT
 LinkingTo: Rcpp
 License: GPL (>=2)
