--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
   person("Sara", "Schaal", email = "schaal.s@husky.neu.edu", role = "aut"),
   person("Liuyang", "Wang", email = "wallacewly@gmail.com", role = "aut"),
   person("Katie", "Lotterhos", email = "k.lotterhos@neu.edu", role = "aut"),
-  peson("Thierry", "Gosselin", email = "thierrygosselin@icloud.com", role = "ctb"))
+  person("Thierry", "Gosselin", email = "thierrygosselin@icloud.com", role = "ctb"))
 Description: MINOTAUR provides stand-alone functions and an interactive user-interface for the exploration, visualisation, and analysis of multivariate genetic data, and provides users with a variety of accessible tools for the identification of outliers in both univariate and multivariate space.
 Depends:
     R (>= 3.2.3)
