* testing install_github with remotes. I think the problem is that packages listed in the *Remotes* section also needs to be included in the *Imports* section.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,12 @@ Depends:
 Imports:
     adegenet,
     ash,
+    BiocInstaller,
     data.table,
+    DT,
     fields,
     ggplot2,
+    OmicCircos,
     RColorBrewer,
     Rcpp,
     shiny,
